# Archive_Archive

./: .env.example  .gitignore  Procfile  README.md  REMOTE_NOTIFY.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: discord-digest.yml
config/: sources.yml
data/: knowledge.sqlite3
src/briefing_bots/: __init__.py  collector.py  digest.py  digest_bot.py  qa.py  qa_bot.py  run_all.py  run_digest_once.py  run_notify_once.py  settings.py  storage.py
src/discord_web_briefing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
